--- a/signal-api/conf/application.conf
+++ b/signal-api/conf/application.conf
@@ -1,1 +1,8 @@
 # https://www.playframework.com/documentation/latest/Configuration
+
+signal {
+    fileDestinationFolder: /home/myname/foldername/
+    schedule {
+        duration.sec: 5
+    }
+}
