Signal API: retire files
remove files older than given number of seconds

--- a/signal-api/conf/application.conf
+++ b/signal-api/conf/application.conf
@@ -3,6 +3,7 @@
 signal {
     fileDestinationFolder: /home/myname/foldername/
     schedule {
-        duration.sec: 5
+        dump.duration.sec: 5 # dump signals to file every 5 seconds
+        clearFodler.duration.sec: 120 # delete all files that are older than 2 minutes
     }
 }
