--- a/signal-api/conf/application.conf
+++ b/signal-api/conf/application.conf
@@ -4,6 +4,6 @@ signal {
     fileDestinationFolder: /home/myname/foldername/
     schedule {
         dump.duration.sec: 5 # dump signals to file every 5 seconds
-        clearFodler.duration.sec: 120 # delete all files that are older than 2 minutes
+        clearFolder.duration.sec: 120 # delete all files that are older than 2 minutes
     }
 }
